<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".testPage">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/task"
                android:textColor="#121111"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="20sp">

                <TextView
                    android:id="@+id/textViewQuestion1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textColor="#1E1C1C"
                    android:textSize="17sp" />

                <RadioButton
                    android:id="@+id/radioButtonQuestion1Variant1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="RadioButton" />

                <RadioButton
                    android:id="@+id/radioButtonQuestion1Variant2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="RadioButton" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/radioGroup2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="15sp">

                <TextView
                    android:id="@+id/textViewQuestion2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textColor="#1E1C1C"
                    android:textSize="17sp" />

                <RadioButton
                    android:id="@+id/radioButtonQuestion2Variant1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="RadioButton" />

                <RadioButton
                    android:id="@+id/radioButtonQuestion2Variant2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="RadioButton" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/radioGroup3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="15sp">

                <TextView
                    android:id="@+id/textViewQuestion3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textColor="#1E1C1C"
                    android:textSize="17sp" />

                <RadioButton
                    android:id="@+id/radioButtonQuestion3Variant1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="RadioButton" />

                <RadioButton
                    android:id="@+id/radioButtonQuestion3Variant2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="RadioButton" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/radioGroup4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="15sp">

                <TextView
                    android:id="@+id/textViewQuestion4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textColor="#1E1C1C"
                    android:textSize="17sp" />

                <RadioButton
                    android:id="@+id/radioButtonQuestion4Variant1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="RadioButton" />

                <RadioButton
                    android:id="@+id/radioButtonQuestion4Variant2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="RadioButton" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/radioGroup5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="15sp">

                <TextView
                    android:id="@+id/textViewQuestion5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textColor="#1E1C1C"
                    android:textSize="17sp" />

                <RadioButton
                    android:id="@+id/radioButtonQuestion5Variant1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="RadioButton" />

                <RadioButton
                    android:id="@+id/radioButtonQuestion5Variant2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="RadioButton" />

            </RadioGroup>

            <Button
                android:id="@+id/buttonFinishTest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonFinishTask" />

            <TextView
                android:id="@+id/textViewResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="30sp"
                android:paddingTop="5sp"
                android:text="@string/result"
                android:textColor="#F41414"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textViewRulesToReview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="30sp"
                android:paddingTop="10sp"
                android:textColor="#F41414"
                android:textSize="25sp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>